# QXlsx

./: Example.md  HowToSetProject.md  README.md
QXlsx/: CMakeLists.txt  QXlsx.pri
QXlsx/header/QXlsx/: xlsxabstractsheet_p.h  xlsxcelllocation.h  xlsxcellrange.h  xlsxchart_p.h  xlsxchartsheet.h  xlsxchartsheet_p.h  xlsxconditionalformatting.h  xlsxcontenttypes_p.h  xlsxdatavalidation_p.h  xlsxdocpropsapp_p.h  xlsxdocpropscore_p.h  xlsxdocument.h  xlsxdocument_p.h  xlsxdrawing_p.h  xlsxdrawinganchor_p.h  xlsxformat.h  xlsxformat_p.h  xlsxmediafile_p.h  xlsxnumformatparser_p.h  xlsxrelationships_p.h  xlsxrichstring.h  xlsxrichstring_p.h  xlsxsharedstrings_p.h  xlsxsimpleooxmlfile_p.h  xlsxstyles_p.h  xlsxutility_p.h  xlsxworkbook.h  xlsxworkbook_p.h  xlsxworksheet.h  xlsxworksheet_p.h
QXlsx/source/: xlsxabstractooxmlfile.cpp  xlsxabstractsheet.cpp  xlsxcell.cpp  xlsxcellformula.cpp  xlsxcelllocation.cpp  xlsxcellrange.cpp  xlsxcellreference.cpp  xlsxchart.cpp  xlsxchartsheet.cpp  xlsxcolor.cpp  xlsxconditionalformatting.cpp  xlsxcontenttypes.cpp  xlsxdatavalidation.cpp  xlsxdatetype.cpp  xlsxdocpropsapp.cpp  xlsxdocpropscore.cpp  xlsxdocument.cpp  xlsxdrawing.cpp  xlsxdrawinganchor.cpp  xlsxformat.cpp  xlsxmediafile.cpp  xlsxnumformatparser.cpp  xlsxrelationships.cpp  xlsxrichstring.cpp  xlsxsharedstrings.cpp  xlsxsimpleooxmlfile.cpp  xlsxstyles.cpp  xlsxtheme.cpp  xlsxutility.cpp  xlsxworkbook.cpp  xlsxworksheet.cpp  xlsxzipreader.cpp  xlsxzipwriter.cpp
header/QXlsx/: xlsxabstractooxmlfile.h  xlsxabstractooxmlfile_p.h  xlsxabstractsheet.h  xlsxcell.h  xlsxcell_p.h  xlsxcellformula.h  xlsxcellformula_p.h  xlsxcellreference.h  xlsxchart.h  xlsxcolor_p.h  xlsxconditionalformatting_p.h  xlsxdatavalidation.h  xlsxdatetype.h  xlsxtheme_p.h  xlsxzipreader_p.h  xlsxzipwriter_p.h
